[package]
name = "p2p_fun"
version = "0.1.0"
authors = ["Albrecht <14820950+weichweich@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.16"
clap = "2.33"
stderrlog = "0.4"
log = "0.4"
hex = "0.4"
